[package]
name = "interoptopus_proc"
description = "Macros to produce Interoptopus item info."
authors.workspace = true
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
keywords = ["ffi"]
categories = ["api-bindings", "development-tools::ffi"]
documentation = "https://docs.rs/interoptopus_proc/"
repository.workspace = true

[lints]
workspace = true

[lib]
path = "src/lib.rs"
proc-macro = true

[dependencies]
proc-macro2.workspace = true
prettyplease.workspace = true
syn = { workspace = true, features = ["full", "visit-mut"] }
quote.workspace = true
darling.workspace = true

[dev-dependencies]
interoptopus = { path = "../core" }
