[package]
name = "interoptopus_proc"
description = "Macros to produce Interoptopus item info."
authors.workspace = true
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
keywords = ["ffi"]
categories = ["api-bindings", "development-tools::ffi"]
documentation = "https://docs.rs/interoptopus_proc/"
repository.workspace = true
homepage.workspace = true

[lints]
workspace = true

[lib]
path = "src/lib.rs"
proc-macro = true

[dependencies]
interoptopus_proc_impl.workspace = true

