[package]
name = "interoptopus_proc"
description = "Macros to produce Interoptopus item info."
authors.workspace = true
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
keywords = ["ffi"]
categories = ["api-bindings", "development-tools::ffi"]
documentation = "https://docs.rs/interoptopus_proc/"
repository.workspace = true

[lints]
workspace = true

[lib]
path = "src/lib.rs"
proc-macro = true

[dependencies]
darling = { workspace = true }
prettyplease = { workspace = true }
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true, features = ["full", "visit-mut"] }

[dev-dependencies]
interoptopus = { path = "../core" } # only for macros doc-tests
