[package]
name = "interoptopus_reference_project"
description = "A reference project for Interoptopus backends to test interop generation."
authors = ["Ralf Biedert <rb@xr.io>"]
version = "0.14.25"
edition = "2024"
license = "MIT"
keywords = ["ffi"]
categories = ["api-bindings", "development-tools::ffi"]
documentation = "https://docs.rs/interoptopus_reference_project/"
repository = "https://github.com/ralfbiedert/interoptopus"
publish = false

[lib]
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
interoptopus = { path = "../core", version = "0.14.0" }
tokio = { version = "1", features = ["full"] }