[package]
name = "interoptopus_reference_project"
description = "A reference project for Interoptopus backends to test interop generation."
authors.workspace = true
version = "0.14.25"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
keywords = ["ffi"]
categories = ["api-bindings", "development-tools::ffi"]
documentation = "https://docs.rs/interoptopus_reference_project/"
repository.workspace = true
publish = false

[lib]
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
interoptopus = { path = "../core", version = "0.15.0-alpha.9" }
tokio = { version = "1", features = ["full"] }
