[package]
name = "example_complex"
version = "0.1.1"
edition = "2018"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
interoptopus = { path = "../../core" }

[dev-dependencies]
interoptopus_backend_csharp = { path = "../../backends/csharp" }
interoptopus_backend_c = { path = "../../backends/c" }
interoptopus_backend_cpython_cffi = { path = "../../backends/cpython_cffi" }
