[package]
name = "hello_world"
version = "0.1.1"
edition.workspace = true
rust-version.workspace = true
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
interoptopus = { path = "../../crates/core" }

[dev-dependencies]
interoptopus_backend_csharp = { path = "../../crates/backend_csharp" }
