[package]
name = "hello_world"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
interoptopus = { workspace = true, features = ["macros", "tokio"] }

[dev-dependencies]
interoptopus_csharp.workspace = true
