[package]
name = "example_complex"
version = "0.1.1"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
interoptopus = { path = "../../crates/core" }

[dev-dependencies]
interoptopus_backend_csharp = { path = "../../crates/backend_csharp" }
interoptopus_backend_c = { path = "../../crates/backend_c" }
interoptopus_backend_cpython = { path = "../../crates/backend_cpython" }
