[package]
name = "example_complex"
version = "0.1.1"
edition = "2021"
rust-version.workspace = true
publish = false

[lib]
name = "example"
crate-type = ["cdylib", "rlib"]

[dependencies]
interoptopus.workspace = true

[dev-dependencies]
interoptopus_csharp.workspace = true
interoptopus_c.workspace = true
interoptopus_cpython.workspace = true
